# trustful-stellar-v1

./: Cargo.toml  README.md  build.rs
.deploy/: deployer.env  factory.env  scorer.env
.github/workflows/: rust.yml
contracts/deployer/: Cargo.toml  README.md
contracts/deployer/src/: deployer.rs
contracts/scorer/: Cargo.toml  README.md  cargo.toml
contracts/scorer/src/: scorer.rs
contracts/scorer_factory/: Cargo.toml  README.md  cargo.toml
contracts/scorer_factory/src/: scorer.wasm  scorer_factory.rs
scripts/: add_10_users.sh  add_mocked_manager.sh  add_mocked_user.sh  add_user_manager.sh  create_scorer.sh  deploy_deployer.sh  deploy_factory.sh  get_events.sh
src/: deployer.rs  lib.rs  scorer.rs  scorer_factory.rs  test_utils.rs
tests/: integration_test.rs
wasm/: deployer.wasm  scorer.wasm  scorer_factory.wasm  trustful_stellar_v1.wasm  trustful_stellar_v1_test_upgradable.wasm
