[package]
name = "trustful-stellar-v1"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "contracts/scorer",
    "contracts/deployer",
    "contracts/scorer_factory"
]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
soroban-sdk = "21.7.7"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
scorer = { path = "contracts/scorer" }
scorer_factory = { path = "contracts/scorer_factory" }
deployer = { path = "contracts/deployer" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true


[package.metadata.build]
build-script = true

[package.metadata.package]
include = [
    "wasm/**/*",
]

[package.metadata.scripts]
build-wasm = """
RUSTFLAGS='-C target-feature=-reference-types' cargo build --target wasm32-unknown-unknown --release -p scorer
RUSTFLAGS='-C target-feature=-reference-types' cargo build --target wasm32-unknown-unknown --release -p deployer
RUSTFLAGS='-C target-feature=-reference-types' cargo build --target wasm32-unknown-unknown --release -p scorer_factory

mkdir -p wasm
cp target/wasm32-unknown-unknown/release/scorer.wasm wasm/
cp target/wasm32-unknown-unknown/release/deployer.wasm wasm/
cp target/wasm32-unknown-unknown/release/scorer_factory.wasm wasm/
"""
