[package]
name = "deployer"
version.workspace = true
edition = "2021"
publish = false

[lib]
path = "src/deployer.rs"
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = []

[dependencies]
scorer = { path = "../scorer" }
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[package.metadata.wasm]
build-std = ["core"]
build-std-features = ["panic_immediate_abort"]
