[package]
name = "scorer"
version.workspace = true
edition = "2021"
publish = false

[lib]
path = "src/scorer.rs"
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = []

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[profile.release-wasm]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
overflow-checks = true

[package.metadata.wasm]
build-std = ["core"]
build-std-features = ["panic_immediate_abort"]